test/errors/for2.input.asm

* = $801

    lda #0
!for i in range(3, 1) { ; end should be greater than or equal to start
    lda #ixx
}
    rts
